Fixed some issues with mobile spacing and now things are looking real good -> I think it is finally almost time to get back to designing and making the site

--- a/src/index.css
+++ b/src/index.css
@@ -463,12 +463,12 @@ a {
     grid-column: span 3;
   }
 
-  .column-two-even div:nth-child(3) {
+  .column-two-even div:nth-child(2) {
     grid-row: 3;
   }
 
   .nav-bottom {
-    height: 8.5rem;
+    height: 4rem;
   }
 
   .navigation > :first-child {
@@ -522,11 +522,12 @@ a {
 
   .nav-mobile nav {
     align-items: flex-start;
-}
+  }
 
 
-.toggler{
-/* ALWAYS KEEPING THE TOGGLER OR THE CHECKBOX ON TOP OF EVERYTHING :  */
+
+  .toggler{
+  /* ALWAYS KEEPING THE TOGGLER OR THE CHECKBOX ON TOP OF EVERYTHING :  */
     z-index: 8;
     height: 50px;
     width: 60px;
@@ -535,9 +536,9 @@ a {
     right: 0;
     cursor: pointer;
     opacity: 0;
-}
+  }
 
-.hamburger{
+  .hamburger{
     position: absolute;
     top: 0;
     right: 0;
@@ -546,16 +547,16 @@ a {
     padding: 0.6rem;
     z-index: 7;
 
-/* FOR DISPLAYING EVERY ELEMENT IN THE CENTER : */
+  /* FOR DISPLAYING EVERY ELEMENT IN THE CENTER : */
 
     display: flex;
     align-items: center;
     justify-content: center;
-}
+  }
 
-/* CREATING THE MIDDLE LINE OF THE HAMBURGER : */
+  /* CREATING THE MIDDLE LINE OF THE HAMBURGER : */
 
-.hamburger > div{
+  .hamburger > div{
     position: relative;
     margin: 0;
     padding: 0;
@@ -566,13 +567,13 @@ a {
     height: 1.7px;
     width: 60%;
     transition: all  0.4s ease;
-}
+  }
 
-/* CREATING THE TOP AND BOTTOM LINES : 
-TOP AT -10PX ABOVE THE MIDDLE ONE AND BOTTOM ONE IS 10PX BELOW THE MIDDLE: */
+  /* CREATING THE TOP AND BOTTOM LINES : 
+  TOP AT -10PX ABOVE THE MIDDLE ONE AND BOTTOM ONE IS 10PX BELOW THE MIDDLE: */
 
-.hamburger > div::before,
-.hamburger > div::after{
+  .hamburger > div::before,
+  .hamburger > div::after{
     content: '';
     position: absolute;
     top: -10px;
@@ -580,40 +581,40 @@ TOP AT -10PX ABOVE THE MIDDLE ONE AND BOTTOM ONE IS 10PX BELOW THE MIDDLE: */
     width: 100%;
     height: 1.5px;
     transition: all  0.4s ease;
-}
+  }
 
-.hamburger > div::after{
+  .hamburger > div::after{
     top: 10px;
-}
+  }
 
-/* IF THE TOGGLER IS IN ITS CHECKED STATE, THEN SETTING THE BACKGROUND OF THE MIDDLE LAYER TO COMPLETE BLACK AND OPAQUE :  */
+  /* IF THE TOGGLER IS IN ITS CHECKED STATE, THEN SETTING THE BACKGROUND OF THE MIDDLE LAYER TO COMPLETE BLACK AND OPAQUE :  */
 
-.toggler:checked + .hamburger > div{
+  .toggler:checked + .hamburger > div{
     background: rgba(0,0,0,0);
-}
+  }
 
-.toggler:checked ~ .background {
+  .toggler:checked ~ .background {
     display: block;
-}
+  }
 
-.toggler:checked + .hamburger > div::before{
+  .toggler:checked + .hamburger > div::before{
     top: 0;
     transform: rotate(45deg);
     background: black;
-}
+  }
 
-/* AND ROTATING THE TOP AND BOTTOM LINES :  */
+  /* AND ROTATING THE TOP AND BOTTOM LINES :  */
 
-.toggler:checked + .hamburger > div::after {
+  .toggler:checked + .hamburger > div::after {
     top: 0;
     transform: rotate(135deg);
     background: black;
-}
+  }
 
 
-/* MAIN MENU WITH THE WHITE BACKGROUND AND THE TEXT :  */
+  /* MAIN MENU WITH THE WHITE BACKGROUND AND THE TEXT :  */
 
-.menu{
+  .menu{
     position: absolute;
     z-index: 6;
     background: white;
@@ -621,53 +622,50 @@ TOP AT -10PX ABOVE THE MIDDLE ONE AND BOTTOM ONE IS 10PX BELOW THE MIDDLE: */
     right: 0;
     top: 0;
     border-left: 1px solid gray;
-
-/* APPLYING TRANSITION TO THE MENU :  */
-
+  /* APPLYING TRANSITION TO THE MENU :  */
     transition: all 0.4s ease;
-    
-}
+  }
 
-/* IF THE TOGGLER IS CHECKED, THEN INCREASE THE WIDTH OF THE MENU TO 30% , CREATING A SMOOTH EFFECT :  */
+  /* IF THE TOGGLER IS CHECKED, THEN INCREASE THE WIDTH OF THE MENU TO 30% , CREATING A SMOOTH EFFECT :  */
 
-.toggler:checked ~ .menu{
+  .toggler:checked ~ .menu{
     width: 40%;
-}
+  }
 
-/* STYLING THE LIST :  */
+  /* STYLING THE LIST :  */
 
-.menu-container {
-  height: 100%;
-  display: flex;
-  flex-direction: column;
-  justify-content: space-between;
-  background-color: white;
-}
+  .menu-container {
+    height: 100%;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    background-color: white;
+  }
 
-.menu > div > nav,
-.menu > div .button
-{
+  .menu > div > nav,
+  .menu > div .button
+  {
     display: flex;
     flex-direction: column;
     top: 0px;
     z-index: 2;
-/* HIDDEN INITIALLY  :  */
+  /* HIDDEN INITIALLY  :  */
     visibility: hidden;
-}
+  }
 
-.menu-container {
-  overflow: hidden;
-}
-.breakout {
-  visibility: hidden;
-}
+  .menu-container {
+    overflow: hidden;
+  }
+  .breakout {
+    visibility: hidden;
+  }
 
-.menu > div > nav {
+  .menu > div > nav {
     list-style: none;
-}
+  }
 
-/* Fix this reference */
-.menu > div > nav > a {
+  /* Fix this reference */
+  .menu > div > nav > a {
     color: whitesmoke;
     text-decoration: none;
     font-size: 1rem;
@@ -677,53 +675,53 @@ TOP AT -10PX ABOVE THE MIDDLE ONE AND BOTTOM ONE IS 10PX BELOW THE MIDDLE: */
     width: 100%;
     text-align: left;
     z-index: 2;
-}
+  }
 
-/* WHEN THE TOGGLER IS CHECKED, CHANGE THE VISIBILITY TO VISIBLE :  */
+  /* WHEN THE TOGGLER IS CHECKED, CHANGE THE VISIBILITY TO VISIBLE :  */
 
-.toggler:checked ~ .menu > div > nav, 
-.toggler:checked ~ .menu > div .button 
-{
+  .toggler:checked ~ .menu > div > nav, 
+  .toggler:checked ~ .menu > div .button 
+  {
     transition: visibility 0.4s ease;
     transition-delay: 0.1s;
     visibility: visible;
-}
+  }
 
-.toggler:checked ~ .menu > div .button {
-  z-index: 1000;
-}
-
-
-.toggler:checked ~ .menu .menu-container {
-  overflow: visible;
-}
+  .toggler:checked ~ .menu > div .button {
+    z-index: 1000;
+  }
 
 
-.toggler:checked ~ .menu > div > nav > a { 
-  border-left: 4px solid white;
-  width: 100%;
-  min-height: 3rem;
-  background-color: white;
-}
+  .toggler:checked ~ .menu .menu-container {
+    overflow: visible;
+  }
 
-.toggler:checked ~ .menu > div > nav > a:hover{
+
+  .toggler:checked ~ .menu > div > nav > a { 
+    border-left: 4px solid white;
+    width: 100%;
+    min-height: 3rem;
+    background-color: white;
+  }
+
+  .toggler:checked ~ .menu > div > nav > a:hover{
     border-left: 4px solid gray;
     background: lightgrey;
-}
+  }
 
 
-.toggler:checked ~ .menu > div > .breakout {
-  position: fixed;
-  background-color: black;
-  opacity: .4;
-  width: 100%;
-  height: 100%;
-  top: 0;
-  left: 0;
-  visibility: inherit;
-  /* z-index: -1; */
-}
+  .toggler:checked ~ .menu > div > .breakout {
+    position: fixed;
+    background-color: black;
+    opacity: .4;
+    width: 100%;
+    height: 100%;
+    top: 0;
+    left: 0;
+    visibility: inherit;
+    /* z-index: -1; */
+  }
 
-/*  */
+  /*  */
   
 }
